Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/CRM_Order_Event_V1__e.object-meta.xml
<CustomObject>
    <description>Platform event invoked from Kafka to Salesforce upon Order inserts and updates</description>
    <label>CRM Order Event V1 - In</label>
    <pluralLabel>CRM_Order_Events_V1 - In</pluralLabel>
</CustomObject>