Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/bankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>bankAccountNumber__c</fullName>
    <label>bankAccountNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>