Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/bankCurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>bankCurrencyCode__c</fullName>
    <label>bankCurrencyCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>