Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/bankID__c.field-meta.xml
<CustomField>
    <fullName>bankID__c</fullName>
    <label>bankID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>