Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/billingAddress1__c.field-meta.xml
<CustomField>
    <fullName>billingAddress1__c</fullName>
    <label>billingAddress1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>