Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/billingAddressAccountID__c.field-meta.xml
<CustomField>
    <fullName>billingAddressAccountID__c</fullName>
    <label>billingAddressAccountID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>