Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/billingAddressCountry__c.field-meta.xml
<CustomField>
    <fullName>billingAddressCountry__c</fullName>
    <label>billingAddressCountry</label>
    <length>25</length>
    <type>Text</type>
</CustomField>