Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/billingAddressIsPrimary__c.field-meta.xml
<CustomField>
    <fullName>billingAddressIsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag tracks the billing address primary.</description>
    <label>billingAddressIsPrimary</label>
    <type>Checkbox</type>
</CustomField>