Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/billingAddressPrimaryPhone__c.field-meta.xml
<CustomField>
    <fullName>billingAddressPrimaryPhone__c</fullName>
    <label>billingAddressPrimaryPhone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>