Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/billingTaxExempt__c.field-meta.xml
<CustomField>
    <fullName>billingTaxExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>billingTaxExempt</label>
    <type>Checkbox</type>
</CustomField>