Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/billingTaxRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>billingTaxRegistrationNumber__c</fullName>
    <label>billingTaxRegistrationNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>