Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/branchName__c.field-meta.xml
<CustomField>
    <fullName>branchName__c</fullName>
    <label>branchName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>