Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/countryCode__c.field-meta.xml
<CustomField>
    <fullName>countryCode__c</fullName>
    <label>countryCode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>