Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/creditCardAuthorizationCode__c.field-meta.xml
<CustomField>
    <fullName>creditCardAuthorizationCode__c</fullName>
    <label>creditCardAuthorizationCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>