Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/deliveryTerm__c.field-meta.xml
<CustomField>
    <fullName>deliveryTerm__c</fullName>
    <label>deliveryTerm</label>
    <length>10</length>
    <type>Text</type>
</CustomField>