Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/entityType__c.field-meta.xml
<CustomField>
    <fullName>entityType__c</fullName>
    <label>entityType</label>
    <length>40</length>
    <type>Text</type>
</CustomField>