Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/iban__c.field-meta.xml
<CustomField>
    <fullName>iban__c</fullName>
    <label>iban</label>
    <length>50</length>
    <type>Text</type>
</CustomField>