Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Line_Items__c</fullName>
    <label>Line Items</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>