Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/metadata__c.field-meta.xml
<CustomField>
    <fullName>metadata__c</fullName>
    <label>metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>