Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/orderNumber__c.field-meta.xml
<CustomField>
    <fullName>orderNumber__c</fullName>
    <label>orderNumber</label>
    <length>12</length>
    <type>Text</type>
</CustomField>