Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/orderType__c.field-meta.xml
<CustomField>
    <fullName>orderType__c</fullName>
    <label>orderType</label>
    <length>30</length>
    <type>Text</type>
</CustomField>