Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/poNumber__c.field-meta.xml
<CustomField>
    <fullName>poNumber__c</fullName>
    <label>poNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>