Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/scheduledShipDate__c.field-meta.xml
<CustomField>
    <fullName>scheduledShipDate__c</fullName>
    <label>scheduledShipDate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>