Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/shippingAddressCity__c.field-meta.xml
<CustomField>
    <fullName>shippingAddressCity__c</fullName>
    <label>shippingAddressCity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>