Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/shippingAmount__c.field-meta.xml
<CustomField>
    <fullName>shippingAmount__c</fullName>
    <label>shippingAmount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>