Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/shippingEmail__c.field-meta.xml
<CustomField>
    <fullName>shippingEmail__c</fullName>
    <label>shippingEmail</label>
    <length>80</length>
    <type>Text</type>
</CustomField>