Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/shippingMethod__c.field-meta.xml
<CustomField>
    <fullName>shippingMethod__c</fullName>
    <label>shippingMethod</label>
    <length>80</length>
    <type>Text</type>
</CustomField>