Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/shippingNotes__c.field-meta.xml
<CustomField>
    <fullName>shippingNotes__c</fullName>
    <label>shippingNotes</label>
    <length>200</length>
    <type>Text</type>
</CustomField>