Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/shippingTaxRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>shippingTaxRegistrationNumber__c</fullName>
    <label>shippingTaxRegistrationNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>