Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/statusMessage__c.field-meta.xml
<CustomField>
    <fullName>statusMessage__c</fullName>
    <label>statusMessage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>