Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/studyID__c.field-meta.xml
<CustomField>
    <fullName>studyID__c</fullName>
    <description>Field that holds the Clinical Study ID. Appropriate for Clinical Orders.</description>
    <label>studyID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>