Prod-EU/force-app/main/default/objects/CRM_Order_Event_V1__e/fields/warehouse__c.field-meta.xml
<CustomField>
    <fullName>warehouse__c</fullName>
    <label>warehouse</label>
    <length>200</length>
    <type>Text</type>
</CustomField>